# asyncPyGithub

./: .gitignore  README.md  User.py  __init__.py  base.py  example.py  main.py  pyproject.toml  repository.py  reqs.txt  requirements-dev.txt  requirements.txt
.github/workflows/: linting.yml  mypy.yml  testing.yml
_types/: __init__.py  base.py  repos.py  users.py
asyncPyGithub/: Repository.py  User.py  __init__.py  base.py  repository.py
asyncPyGithub/_types/: __init__.py  base.py  content.py  repos.py  users.py
asyncPyGithub/_types/schemas/: ContentTree.json  Contributor.json  FullRepository.json  Tag.json
tests/: conftest.py  test_001_users.py  test_002_repos.py  test_users.py
tests/traffic/: all_users_page1_pp5.json  authenticate.json  hovercard.json  repos.json  user_by_id.json  user_update.json
